--- a/index.html
+++ b/index.html
@@ -1,13 +1,63 @@
 <html>
+
 <head>
-<title>Dit is de site van Joke</title>
+  <title> Stamboomonderzoek Joke </title>
+  <style>
+    body,
+    html {
+      height: 100%;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    .bg-image {
+      /* The image used */
+      background-image: url("olifant.jpg");
+
+      /* Add the blur effect */
+      filter: blur(8px);
+      -webkit-filter: blur(8px);
+
+      /* Full height */
+      height: 100%;
+
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    /* Position text in the middle of the page/image */
+    .bg-text {
+      background-color: rgb(0, 0, 0);
+      /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.4);
+      /* Black w/opacity/see-through */
+      color: #4080ca;
+      font-weight: bold;
+      border: 3px solid #f6e3d2;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      width: 80%;
+      padding: 20px;
+      text-align: center;
+      font-family:cursive;
+  
+    }
+  </style>
 </head>
 
 <body>
+  <div class="bg-image"></div>
+  <div class="bg-text">
+    <h2>Hello World</h2>
+  </div>
 
-Hallo :)
+  
 
 </body>
-
-
-</html>
